# Vibe-2025

./: .dockerignore  .gitignore  .gitmodules  LICENSE  README.md  grml.yaml  main.py  pyproject.toml
fastapi/: .env.example  Dockerfile  compose.yaml  main.py  requirements.txt
fastapi/app/: __init__.py  config.py  database.py  main.py  mcq_core.py
fastapi/app/routers/: api_routes.py  legacy_mcqs.py
frontend/: .env.example  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/components/Auth/: LoginForm.tsx  Onboarding.tsx
frontend/src/components/Dashboard/: Dashboard.tsx
frontend/src/components/Home/: HomePage.tsx
frontend/src/components/Layout/: Header.tsx  Sidebar.tsx
frontend/src/components/LearningSession/: CreateSessionForm.tsx  SessionDetails.tsx
frontend/src/components/MCQ/: MCQQuiz.tsx
frontend/src/components/UI/: Button.tsx  ErrorBoundary.tsx  ErrorMessage.tsx  LoadingSpinner.tsx
frontend/src/config/: apiBase.ts
frontend/src/hooks/: useAuth.ts  useForm.ts  useMCQ.ts
frontend/src/hooks/queries/: useDocumentsQuery.ts  useLearningSessionsQuery.ts  useMCQQuery.ts
frontend/src/types/: index.ts
frontend/src/utils/: api.ts  learningSessionApi.ts  validation.ts
